# actix_api_example

./: .env  .env.example  Cargo.toml  README.md  database.sql
src/: database.rs  main.rs  routes.rs
src/handlers/: auth.rs
src/middleware/: auth.rs
src/models/: token.rs  user.rs
