[package]
name = "actix_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-rt = "2.2"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
md5 = "0.7"
serde_json = "1.0"
futures-util = "0.3"
validator = { version = "0.16", features = ["derive"] }
